--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
+    "node-schedule": "^1.3.1",
     "path": "^0.12.7",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
