--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "mysql": "^2.16.0",
     "node-schedule": "^1.3.1",
     "path": "^0.12.7",
+    "read-conf": "^0.5.1",
+    "read-config": "^2.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "winston": "^3.1.0",
